# dynfmt2

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
src/: curly.rs  formatter.rs  lib.rs  python.rs
tests/: test_curly.rs  test_error_messages.rs  test_python.rs
