[package]
name = "dynfmt2"
version = "0.3.0"
authors = ["Joel Natividad"]
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
readme = "README.md"
repository = "https://github.com/dathere/dynfmt2"
homepage = "https://github.com/dathere/dynfmt2"
documentation = "https://docs.rs/dynfmt2"
description = """
A crate for formatting strings dynamically. Forked from dynfmt.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
erased-serde = "0.4"
regex = { version = "1", optional = true }
serde = "1"
serde_json = { version = "1", optional = true }
thiserror = "2.0"

[features]
default = ["json"]
json = ["serde_json"]
python = ["regex"]
curly = ["regex"]
